fixed overflow issues on web and mobile again by adding both x and y overflows hidden to body and only overflow y hidden to html

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,18 @@ html{
   margin:0;
   padding:0;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
- body{
+body{
   background: #2D322B;
   color: #E3DFD6; 
-  
-
-
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
+
 *{
   box-sizing: border-box;
-  scroll-behavior: smooth;
+ 
   margin: 0;
   padding: 0;
   
